docs: add UI design guidelines for Frappe UI style
- Add mandatory Frappe UI design principles section
- Include specific styling rules for buttons, inputs, cards, CSS variables
- Add design research process using Context7
- Include quality checklist and migration steps
- Ensure all shadcn-svelte components follow minimal, clean design

--- a/frontend/.svelte-instructions.md
+++ b/frontend/.svelte-instructions.md
@@ -118,6 +118,124 @@ After implementation:
 
 ---
 
+# 🎨 UI Design Guidelines - Frappe UI Style
+
+## **MANDATORY: All shadcn-svelte components MUST follow Frappe UI design principles**
+
+### **Frappe UI Philosophy:**
+Frappe UI emphasizes **clean, minimal, professional** design with:
+- ✅ **Minimal shadows** - Remove most shadow effects for cleaner look
+- ✅ **Simple rounded corners** - Use `rounded` or `rounded-lg`, avoid `rounded-xl`
+- ✅ **Gray-based color scheme** - Prefer simple grays over complex color systems
+- ✅ **Clean focus states** - Simple border changes, no complex rings
+- ✅ **Compact spacing** - Reduce padding and margins for tighter layouts
+
+### **Component Styling Rules:**
+
+#### **Buttons:**
+```typescript
+// ✅ CORRECT: Frappe UI style
+buttonVariants = tv({
+  base: "inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap text-sm font-medium outline-none transition-colors disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border border-transparent focus-visible:border-gray-300 focus-visible:outline-none",
+  variants: {
+    variant: {
+      default: 'bg-gray-900 text-white hover:bg-gray-800',
+      destructive: 'bg-red-600 text-white hover:bg-red-700',
+      outline: 'border-gray-300 bg-white text-gray-700 hover:bg-gray-50',
+      secondary: 'bg-gray-100 text-gray-900 hover:bg-gray-200',
+      ghost: 'text-gray-700 hover:bg-gray-100',
+      link: 'text-blue-600 underline-offset-4 hover:underline'
+    },
+    size: {
+      default: 'h-8 px-3 py-1.5',
+      sm: 'h-7 gap-1.5 px-2.5 py-1 text-xs',
+      lg: 'h-9 px-4 py-2 text-base',
+      icon: 'size-8',
+      'icon-sm': 'size-7',
+      'icon-lg': 'size-9'
+    }
+  }
+});
+
+// ❌ WRONG: Avoid shadcn default style
+// shadow-xs, rounded-md, complex focus rings, OKLCH colors
+```
+
+#### **Inputs:**
+```typescript
+// ✅ CORRECT: Frappe UI style
+class={cn(
+  'flex h-8 w-full min-w-0 rounded border border-gray-300 bg-white px-3 py-1.5 text-sm outline-none placeholder:text-gray-500 disabled:cursor-not-allowed disabled:opacity-50',
+  'focus:border-gray-500 focus:outline-none',
+  'aria-invalid:border-red-500',
+  className
+)}
+
+// ❌ WRONG: Avoid complex styling
+// shadow-xs, complex ring system, OKLCH colors
+```
+
+#### **Cards:**
+```typescript
+// ✅ CORRECT: Frappe UI style
+class={cn(
+  'flex flex-col gap-4 rounded-lg border border-gray-200 bg-white p-4 text-gray-900',
+  className
+)}
+
+// ❌ WRONG: Avoid heavy styling
+// rounded-xl, shadow-sm, complex spacing
+```
+
+#### **CSS Variables:**
+```css
+/* ✅ CORRECT: Simple hex colors */
+:root {
+  --radius: 0.375rem;
+  --background: #ffffff;
+  --foreground: #1f2937;
+  --primary: #1f2937;
+  --border: #e5e7eb;
+  --destructive: #dc2626;
+}
+
+/* ❌ WRONG: Avoid complex color systems */
+/* OKLCH colors, large radius (0.625rem) */
+```
+
+### **Design Research Process:**
+
+1. **Study Frappe UI** - Use Context7 to research `/frappe/frappe-ui` documentation
+2. **Analyze components** - Compare with current shadcn-svelte implementations
+3. **Apply minimal changes** - Focus on removing complexity, not adding features
+4. **Test consistency** - Ensure all components follow the same design language
+
+### **Tools for UI Research:**
+
+- **Context7**: `resolve-library-id` and `get-library-docs` for Frappe UI research
+- **Frappe UI Website**: https://ui.frappe.io/ for visual reference
+- **Component Comparison**: Side-by-side testing of old vs new styles
+
+### **Quality Checklist:**
+
+- [ ] All shadows removed or minimized
+- [ ] Rounded corners consistent (rounded-lg max)
+- [ ] Color scheme uses simple grays
+- [ ] Focus states are clean and minimal
+- [ ] Spacing is compact and consistent
+- [ ] Components look professional and clean
+
+### **Migration Steps:**
+
+1. **Update CSS variables** - Replace OKLCH with hex colors, reduce radius
+2. **Modify button variants** - Remove shadows, simplify colors, reduce padding
+3. **Update input styling** - Remove shadows, simplify focus states
+4. **Simplify card design** - Remove shadows, reduce rounded corners
+5. **Update dialog/modal** - Remove shadows, use minimal styling
+6. **Test all components** - Ensure consistency across the application
+
+---
+
 **REMEMBER: Svelte 5 runes are the ONLY acceptable way to write Svelte code in this project. Always consult MCP documentation first!**
 
 # Agent & Contributor Instructions — Use bun as default
