feat(project): update task status for authentication UI issue
- Updated task_08.02.01_authentication_pages.md status to Blocked_By_Session_Expired_Error
- Added log entry for session_expired error reported during login testing
- Updated TASKS_OVERVIEW.md to reflect the blocking issue
- Added recent changes entry documenting the authentication UI issue

Issue: Login functionality returns 'session_expired' error during testing
Requires investigation of session management and authentication flow integration

Per folder-tasks workflow: Update project overview after task status changes.

--- a/frontend/.svelte-instructions.md
+++ b/frontend/.svelte-instructions.md
@@ -5,6 +5,7 @@
 **ALL Svelte/SvelteKit development MUST follow these rules:**
 
 ### 🔍 **Before Any Svelte Code Changes:**
+
 1. **ALWAYS** call `mcp_svelte_list-sections` first to see available documentation
 2. **ALWAYS** call `mcp_svelte_get-documentation` with relevant sections before implementing
 3. **NEVER** implement Svelte code without consulting current Svelte 5 documentation
@@ -12,6 +13,7 @@
 ### 🏗️ **Svelte 5 Runes Usage (MANDATORY):**
 
 #### State Management
+
 ```typescript
 // ✅ CORRECT: Use $state rune
 export const userState = $state<User | null>(null);
@@ -22,38 +24,41 @@ export const isLoading = $state(false);
 ```
 
 #### Reactive Statements
+
 ```svelte
 <script>
-  let count = $state(0);
-  let doubled = $derived(count * 2);
+	let count = $state(0);
+	let doubled = $derived(count * 2);
 
-  // ✅ CORRECT: Use $effect for side effects
-  $effect(() => {
-    console.log('Count changed:', count);
-  });
+	// ✅ CORRECT: Use $effect for side effects
+	$effect(() => {
+		console.log('Count changed:', count);
+	});
 
-  // ❌ WRONG: Never use reactive statements
-  // $: console.log('Count changed:', count);
-  // $: doubled = count * 2;
+	// ❌ WRONG: Never use reactive statements
+	// $: console.log('Count changed:', count);
+	// $: doubled = count * 2;
 </script>
 ```
 
 #### Component Props
+
 ```svelte
 <script>
-  // ✅ CORRECT: Use $props rune
-  let { title, items = $bindable() } = $props<{
-    title: string;
-    items?: string[];
-  }>();
+	// ✅ CORRECT: Use $props rune
+	let { title, items = $bindable() } = $props<{
+		title: string;
+		items?: string[];
+	}>();
 
-  // ❌ WRONG: Never use export let
-  // export let title: string;
-  // export let items: string[] = [];
+	// ❌ WRONG: Never use export let
+	// export let title: string;
+	// export let items: string[] = [];
 </script>
 ```
 
 #### Template Syntax
+
 ```svelte
 <!-- ✅ CORRECT: Use {@render ...} -->
 {@render children()}
@@ -74,6 +79,7 @@ export const isLoading = $state(false);
 ### 🔄 **Migration Checklist:**
 
 When working with existing code:
+
 - [ ] Replace `writable()` stores with `$state`
 - [ ] Replace `$store` syntax with direct state access
 - [ ] Replace `$:` reactive statements with `$effect` or `$derived`
@@ -111,6 +117,7 @@ When working with existing code:
 ### 🎯 **Quality Assurance:**
 
 After implementation:
+
 - Run `bun run build` to ensure compilation
 - Run `bun run lint` for code quality
 - Run `bun run test` for functionality
@@ -123,7 +130,9 @@ After implementation:
 ## **MANDATORY: All shadcn-svelte components MUST follow Frappe UI design principles**
 
 ### **Frappe UI Philosophy:**
+
 Frappe UI emphasizes **clean, minimal, professional** design with:
+
 - ✅ **Minimal shadows** - Remove most shadow effects for cleaner look
 - ✅ **Simple rounded corners** - Use `rounded` or `rounded-lg`, avoid `rounded-xl`
 - ✅ **Gray-based color scheme** - Prefer simple grays over complex color systems
@@ -133,28 +142,29 @@ Frappe UI emphasizes **clean, minimal, professional** design with:
 ### **Component Styling Rules:**
 
 #### **Buttons:**
+
 ```typescript
 // ✅ CORRECT: Frappe UI style
 buttonVariants = tv({
-  base: "inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap text-sm font-medium outline-none transition-colors disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border border-transparent focus-visible:border-gray-300 focus-visible:outline-none",
-  variants: {
-    variant: {
-      default: 'bg-gray-900 text-white hover:bg-gray-800',
-      destructive: 'bg-red-600 text-white hover:bg-red-700',
-      outline: 'border-gray-300 bg-white text-gray-700 hover:bg-gray-50',
-      secondary: 'bg-gray-100 text-gray-900 hover:bg-gray-200',
-      ghost: 'text-gray-700 hover:bg-gray-100',
-      link: 'text-blue-600 underline-offset-4 hover:underline'
-    },
-    size: {
-      default: 'h-8 px-3 py-1.5',
-      sm: 'h-7 gap-1.5 px-2.5 py-1 text-xs',
-      lg: 'h-9 px-4 py-2 text-base',
-      icon: 'size-8',
-      'icon-sm': 'size-7',
-      'icon-lg': 'size-9'
-    }
-  }
+	base: "inline-flex shrink-0 items-center justify-center gap-2 whitespace-nowrap text-sm font-medium outline-none transition-colors disabled:pointer-events-none disabled:opacity-50 aria-disabled:pointer-events-none aria-disabled:opacity-50 [&_svg:not([class*='size-'])]:size-4 [&_svg]:pointer-events-none [&_svg]:shrink-0 border border-transparent focus-visible:border-gray-300 focus-visible:outline-none",
+	variants: {
+		variant: {
+			default: 'bg-gray-900 text-white hover:bg-gray-800',
+			destructive: 'bg-red-600 text-white hover:bg-red-700',
+			outline: 'border-gray-300 bg-white text-gray-700 hover:bg-gray-50',
+			secondary: 'bg-gray-100 text-gray-900 hover:bg-gray-200',
+			ghost: 'text-gray-700 hover:bg-gray-100',
+			link: 'text-blue-600 underline-offset-4 hover:underline'
+		},
+		size: {
+			default: 'h-8 px-3 py-1.5',
+			sm: 'h-7 gap-1.5 px-2.5 py-1 text-xs',
+			lg: 'h-9 px-4 py-2 text-base',
+			icon: 'size-8',
+			'icon-sm': 'size-7',
+			'icon-lg': 'size-9'
+		}
+	}
 });
 
 // ❌ WRONG: Avoid shadcn default style
@@ -162,6 +172,7 @@ buttonVariants = tv({
 ```
 
 #### **Inputs:**
+
 ```typescript
 // ✅ CORRECT: Frappe UI style
 class={cn(
@@ -176,6 +187,7 @@ class={cn(
 ```
 
 #### **Cards:**
+
 ```typescript
 // ✅ CORRECT: Frappe UI style
 class={cn(
@@ -188,15 +200,16 @@ class={cn(
 ```
 
 #### **CSS Variables:**
+
 ```css
 /* ✅ CORRECT: Simple hex colors */
 :root {
-  --radius: 0.375rem;
-  --background: #ffffff;
-  --foreground: #1f2937;
-  --primary: #1f2937;
-  --border: #e5e7eb;
-  --destructive: #dc2626;
+	--radius: 0.375rem;
+	--background: #ffffff;
+	--foreground: #1f2937;
+	--primary: #1f2937;
+	--border: #e5e7eb;
+	--destructive: #dc2626;
 }
 
 /* ❌ WRONG: Avoid complex color systems */
@@ -244,13 +257,15 @@ This repository prefers bun for local development, scripting, and package manage
 These instructions document the project's preference and provide examples so agents and contributors use a consistent workflow.
 
 Why bun?
+
 - Fast installs and runtime
 - Single-tool approach (install, run, scripts)
 - Works well with Vite/Svelte projects
 
 Guidelines (always follow when running commands in the repository):
 
-1) Use `bun` to run npm scripts
+1. Use `bun` to run npm scripts
+
 - Run dev server:
 
 ```zsh
@@ -270,25 +285,27 @@ bun run test:unit
 bun run test:e2e
 ```
 
-2) Use `bun add` to install packages
+2. Use `bun add` to install packages
 
 ```zsh
 bun add valibot@latest
 bun add <package>
 ```
 
-3) Use `bunx` for CLI binaries when needed
+3. Use `bunx` for CLI binaries when needed
 
 ```zsh
 bunx playwright test
 bunx vitest
 ```
 
-4) When scripting or running commands from the agent, assume zsh:
+4. When scripting or running commands from the agent, assume zsh:
+
 - Use absolute paths when required
 - Use `bun`/`bunx` instead of `npm`/`npx`/`pnpm`
 
-5) Git and CI
+5. Git and CI
+
 - Commit messages should reference task IDs in `PROJECT_TRACKING` when relevant.
 - Example commit message:
 
@@ -296,12 +313,14 @@ bunx vitest
 feat(auth): complete authentication UI [TaskID: 08.02.01]
 ```
 
-6) Notes for automated agents
+6. Notes for automated agents
+
 - Agents should not change system-level instructions, but they should follow this file when running repo commands.
 - If a command would normally use `npm`/`pnpm`, prefer the bun equivalent.
 - If using tools unavailable via bun, use `bunx <tool>`.
 
-7) Troubleshooting
+7. Troubleshooting
+
 - If `bun run` reports "Script not found", inspect `package.json` scripts and use `bunx vite dev` or similar as fallback.
 
 ---
