--- a/frontend/.svelte-instructions.md
+++ b/frontend/.svelte-instructions.md
@@ -251,78 +251,146 @@ class={cn(
 
 **REMEMBER: Svelte 5 runes are the ONLY acceptable way to write Svelte code in this project. Always consult MCP documentation first!**
 
-# Agent & Contributor Instructions — Use bun as default
+# Agent & Contributor Instructions — ALWAYS Use Bun
 
-This repository prefers bun for local development, scripting, and package management.
-These instructions document the project's preference and provide examples so agents and contributors use a consistent workflow.
+**CRITICAL: This repository REQUIRES bun for all frontend development operations.**
 
-Why bun?
+This is NOT optional - bun must be used for package management, running scripts, and executing CLI tools.
 
-- Fast installs and runtime
-- Single-tool approach (install, run, scripts)
-- Works well with Vite/Svelte projects
+## Why Bun is Mandatory
 
-Guidelines (always follow when running commands in the repository):
+- **Performance**: 10-20x faster installs compared to npm/pnpm
+- **All-in-one tooling**: Single binary replaces npm + npx + node
+- **Native TypeScript**: Direct `.ts` execution without transpilation
+- **Optimized for Vite/Svelte**: Better HMR performance and build times
+- **Compatibility**: Drop-in replacement for npm with better caching
 
-1. Use `bun` to run npm scripts
+## Strict Guidelines for Agents and Contributors
 
-- Run dev server:
+### 1. **Package Management - ALWAYS use `bun`**
 
 ```zsh
+# Install dependencies
+bun install
+
+# Add new packages
+bun add <package>
+bun add --dev <package>
+
+# Update packages
+bun update <package>
+
+# Remove packages
+bun remove <package>
+```
+
+**❌ NEVER use:** `npm install`, `npm add`, `pnpm add`
+**✅ ALWAYS use:** `bun install`, `bun add`
+
+### 2. **Running Scripts - ALWAYS use `bun run`**
+
+```zsh
+# Development server
 bun run dev
-```
 
-- Run TypeScript/Svelte checks:
-
-```zsh
+# Type checking
 bun run check
-```
 
-- Run tests (unit / e2e):
+# Build production
+bun run build
 
-```zsh
+# Run tests
 bun run test:unit
 bun run test:e2e
+bun run test
 ```
 
-2. Use `bun add` to install packages
+**❌ NEVER use:** `npm run dev`, `npm run build`
+**✅ ALWAYS use:** `bun run dev`, `bun run build`
+
+### 3. **CLI Tools - ALWAYS use `bunx`**
 
 ```zsh
-bun add valibot@latest
-bun add <package>
-```
-
-3. Use `bunx` for CLI binaries when needed
-
-```zsh
+# Run Playwright
 bunx playwright test
+
+# Run Vitest directly
 bunx vitest
+
+# Any other CLI tool
+bunx <command>
 ```
 
-4. When scripting or running commands from the agent, assume zsh:
+**❌ NEVER use:** `npx`, `pnpm dlx`
+**✅ ALWAYS use:** `bunx`
 
-- Use absolute paths when required
-- Use `bun`/`bunx` instead of `npm`/`npx`/`pnpm`
+### 4. **Shell Environment**
 
-5. Git and CI
+- Default shell: `zsh`
+- Use absolute paths when necessary
+- All commands assume bun is installed globally
 
-- Commit messages should reference task IDs in `PROJECT_TRACKING` when relevant.
-- Example commit message:
+### 5. **Git Commit Messages**
+
+Reference task IDs from `PROJECT_TRACKING`:
 
 ```
 feat(auth): complete authentication UI [TaskID: 08.02.01]
+fix(api): handle cookie-based refresh tokens [TaskID: 08.02.03]
 ```
 
-6. Notes for automated agents
+### 6. **Quality Assurance Commands**
 
-- Agents should not change system-level instructions, but they should follow this file when running repo commands.
-- If a command would normally use `npm`/`pnpm`, prefer the bun equivalent.
-- If using tools unavailable via bun, use `bunx <tool>`.
+Run these before committing:
 
-7. Troubleshooting
+```zsh
+# Type checking + linting
+bun run check
 
-- If `bun run` reports "Script not found", inspect `package.json` scripts and use `bunx vite dev` or similar as fallback.
+# Unit tests
+bun run test:unit
+
+# E2E tests  
+bun run test:e2e
+
+# Format code
+bun run format
+
+# Build verification
+bun run build
+```
+
+## Critical Rules for AI Agents
+
+1. **NEVER suggest or use npm/pnpm/npx commands** - Always convert to bun equivalents
+2. **When reading package.json scripts** - Execute with `bun run <script>`
+3. **For any CLI tool** - Use `bunx <tool>` instead of `npx <tool>`
+4. **Installation commands** - Always use `bun install` or `bun add`
+5. **If a command fails** - Check if the script exists in package.json, then use `bunx` as fallback
+
+## Troubleshooting
+
+**Script not found:**
+```zsh
+# Check package.json scripts first
+cat package.json | grep -A 20 '"scripts"'
+
+# If not in scripts, use bunx
+bunx vite dev
+```
+
+**Module not found:**
+```zsh
+# Always reinstall with bun
+bun install
+```
+
+**Permission issues:**
+```zsh
+# Bun doesn't need sudo for global installs
+bun install -g <package>
+```
 
 ---
 
-This file is informational and intended to align local contributors and automated agents to a common workflow: always use `bun` where possible.
+**This file sets strict requirements: ALL frontend operations MUST use bun. No exceptions.**
